調整網頁內容排版

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
 <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
-        <a class="nav-item nav-link disabled"><b>社群媒體分析2025</b></a>
+        <a class="nav-item nav-link disabled"><b>社群媒體分析202</b></a>
         <a class="nav-item nav-link active" id="nav-gs1-tab" data-toggle="tab" href="#nav-gs1" role="tab" aria-controls="nav-gs1" aria-selected="true"><b>第一次讀書會</b></a>
         <a class="nav-item nav-link" id="nav-gs2-tab" data-toggle="tab" href="#nav-gs2" role="tab" aria-controls="nav-gs2" aria-selected="true"><b>第二次讀書會</b></a>
         <!-- <a class="nav-item nav-link" id="nav-midp-tab" data-toggle="tab" href="#nav-midp" role="tab" aria-controls="nav-midp" aria-selected="true"><b>期中報告</b></a> -->
@@ -191,11 +191,12 @@
             <tr>
                 <td>第十三組</td>
                 <td>台積電擴大對美投資之情緒分析</td>
-                <td><a href="https://docs.google.com/viewer?url=https://github.com/Text-Analytics-and-Retrieval/SMA_2025S/raw/main/study_group/1st/G13/study_group13.pdf" target="_blank">
-                    <button type="button" class="btn btn-outline-primary btn-sm">doc</button>
-                    </a>
+                <td>
                     <a href="https://nbviewer.org/github/Text-Analytics-and-Retrieval/SMA_2025S/blob/main/study_group/1st/G13/study_group13.ipynb" target="_blank">
                         <button type="button" class="btn btn-outline-danger btn-sm">ipynb</button>
+                    </a>
+                    <a href="https://docs.google.com/viewer?url=https://github.com/Text-Analytics-and-Retrieval/SMA_2025S/raw/main/study_group/1st/G13/study_group13.pdf" target="_blank">
+                    <button type="button" class="btn btn-outline-primary btn-sm">doc</button>
                     </a>
                 </td>
                 <td>林坤郁、陳忠泰、陳莘惠、張祐倫、郭展州</td>
@@ -324,11 +325,12 @@
             <tr>
                 <td>第十一組</td>
                 <td>分析PTT八卦版林襄相關文章之詞彙關係與主題分析</td>
-                <td><a href="https://docs.google.com/viewer?url=https://github.com/Text-Analytics-and-Retrieval/SMA_2025S/raw/main/study_group/2nd/G11/study_group11.pdf" target="_blank">
-                    <button type="button" class="btn btn-outline-primary btn-sm">doc</button>
-                    </a>
+                <td>
                     <a href="https://nbviewer.org/github/Text-Analytics-and-Retrieval/SMA_2025S/blob/main/study_group/2nd/G11/study_group11.ipynb" target="_blank">
                     <button type="button" class="btn btn-outline-danger btn-sm">ipynb</button>
+                    </a>
+                    <a href="https://docs.google.com/viewer?url=https://github.com/Text-Analytics-and-Retrieval/SMA_2025S/raw/main/study_group/2nd/G11/study_group11.pdf" target="_blank">
+                    <button type="button" class="btn btn-outline-primary btn-sm">doc</button>
                     </a>
                 </td>
                 <td>馬永恩、莊筑雅、陳勁廷、吳亭緯、李明容、蕭瑜垚、楊毅婷、傅才容</td>
@@ -345,11 +347,12 @@
             <tr>
                 <td>第十三組</td>
                 <td>Tripadvisor評論情緒分析與飯店星級預測</td>
-                <td><a href="https://docs.google.com/viewer?url=https://github.com/Text-Analytics-and-Retrieval/SMA_2025S/raw/main/study_group/2nd/G13/study_group13.docx" target="_blank">
-                    <button type="button" class="btn btn-outline-primary btn-sm">doc</button>
-                    </a>
+                <td>
                     <a href="https://nbviewer.org/github/Text-Analytics-and-Retrieval/SMA_2025S/blob/main/study_group/2nd/G13/study_group13.ipynb" target="_blank">
                     <button type="button" class="btn btn-outline-danger btn-sm">ipynb</button>
+                    </a>
+                    <a href="https://docs.google.com/viewer?url=https://github.com/Text-Analytics-and-Retrieval/SMA_2025S/raw/main/study_group/2nd/G13/study_group13.docx" target="_blank">
+                    <button type="button" class="btn btn-outline-primary btn-sm">doc</button>
                     </a>
                 </td>
                 <td>林坤郁、陳忠泰、陳莘惠、張祐倫、郭展州</td>
@@ -807,7 +810,7 @@
                 <td>美國總統大選主題趨勢探索</td>
                 <td>
                     <a href="https://docs.google.com/viewer?url=https://github.com/Text-Analytics-and-Retrieval/SMA_2025S/raw/main/study_group/3rd/G9/study_group9.pdf" target="_blank">
-                        <button type="button" class="btn btn-outline-danger btn-sm">doc</button>
+                        <button type="button" class="btn btn-outline-primary btn-sm">doc</button>
                     </a>
                 </td>
                 <td>黃緯翔、沈世英、趙千霈、邱懷英、陳柏豪、邱翔、永瑞華、施泳呈</td>
@@ -825,7 +828,7 @@
                 <td>第十一組</td>
                 <td>分析PPT國際、世界、體育版新聞主題分布</td>
                 <td><a href="https://nbviewer.org/github/Text-Analytics-and-Retrieval/SMA_2025S/blob/main/study_group/3rd/G11/study_group11.ipynb" target="_blank">
-                    <button type="button" class="btn btn-outline-primary btn-sm">ipynb</button>
+                    <button type="button" class="btn btn-outline-danger btn-sm">ipynb</button>
                     </a>
                 </td>
                 <td>馬永恩、莊筑雅、陳勁廷、吳亭緯、李明容、蕭瑜垚、楊毅婷、傅才容</td>
@@ -843,7 +846,7 @@
                 <td>第十三組</td>
                 <td>新聞文本NLP處理與真假新聞分類</td>
                 <td><a href="https://nbviewer.org/github/Text-Analytics-and-Retrieval/SMA_2025S/blob/main/study_group/3rd/G13/study_group13.ipynb" target="_blank">
-                    <button type="button" class="btn btn-outline-primary btn-sm">ipynb</button>
+                    <button type="button" class="btn btn-outline-danger btn-sm">ipynb</button>
                     </a>
                 </td>
                 <td>林坤郁、陳忠泰、陳莘惠、張祐倫、郭展州</td>
